<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    android:orientation="vertical"
    android:padding="40dp"
    android:theme="@style/NavTheme"
    tools:context=".Fragments.Plans.AddPlanFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/button_back_add_plan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:src="@drawable/back_icon_white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:fontFamily="casual"
            android:gravity="center"
            android:text="@string/add_plan"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold|italic" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/plan_message"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold|italic" />



    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:hint="@string/card_title"
        android:textColorHint="@color/white"
        app:boxStrokeColor="@color/white"
        app:boxStrokeWidth="3dp"
        app:boxStrokeWidthFocused="2dp"
        app:endIconMode="clear_text"
        app:endIconTint="@color/white"
        app:helperTextTextColor="@color/white"
        app:hintTextColor="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:textColor="@color/white"
            android:textStyle="bold"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/card_content"
        android:textColorHint="@color/white"
        app:boxStrokeColor="@color/white"
        app:boxStrokeWidth="3dp"
        app:boxStrokeWidthFocused="2dp"
        app:endIconMode="clear_text"
        app:endIconTint="@color/white"
        app:helperTextTextColor="@color/white"
        app:hintTextColor="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </com.google.android.material.textfield.TextInputLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/layout_style"
        android:orientation="vertical"
        android:padding="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/text_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="12dp"
                android:layout_weight="1"
                android:fontFamily="casual"
                android:gravity="center"
                android:hint="@string/choose_date_please"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="18sp"
                android:textStyle="bold|italic" />

            <Button
                android:id="@+id/button_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/button_style_2"
                android:gravity="center"
                android:text="@string/choose_date"
                android:textColor="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
           >

            <TextView
                android:id="@+id/text_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="12dp"
                android:gravity="center"
                android:layout_gravity="center"
                android:hint="@string/choose_time_please"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:textStyle="bold|italic"
                android:fontFamily="casual"
                android:textSize="18sp"
                />

            <Button
                android:id="@+id/button_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_style_2"
                android:textColor="@color/white"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:text="@string/choose_time"/>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/button_confirm_plan"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:background="@drawable/button_style"
        android:textColor="@color/white"
        android:text="@string/add_plan"/>


</LinearLayout>