<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Activities.MainActivity">

    <LinearLayout
        android:id="@+id/layout_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="40dp"
             >

            <ImageView
                android:id="@+id/button_back_my_plans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/back_icon_white"
                android:layout_marginStart="30dp"
                android:gravity="center"
                />

            <TextView
                android:id="@+id/text_plan_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:fontFamily="casual"
                android:text="@string/my_plans"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_marginStart="30dp"
                android:textStyle="bold" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="30dp">

            <Button
                android:id="@+id/button_daily"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/daily"
                android:textColor="@color/white"
                android:background="@drawable/button_style_3"
                android:layout_gravity="center"
                />

            <Button
                android:id="@+id/button_weekly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weekly"
                android:textColor="@color/white"
                android:background="@drawable/button_style_3"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"

                />

            <Button
                android:id="@+id/button_monthly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_style_3"
                android:text="@string/monthly"
                android:textColor="@color/white"

                />


        </LinearLayout>

    </LinearLayout>


    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >


    </FrameLayout>

</LinearLayout>