<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="40dp"
    android:theme="@style/NavTheme"
    android:background="@color/green"
    tools:context=".Fragments.Database.RegisterFragment">

    <ImageView
        android:id="@+id/button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/back_icon_black"/>

    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:background="@drawable/layout_style">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:fontFamily="casual"
            android:text="@string/register_message"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_surname"
            android:textColorHint="@color/colorAccent"
            app:endIconMode="clear_text"
            app:endIconTint="@color/colorAccent"
            app:boxStrokeWidthFocused="2dp"
            app:boxStrokeColor="@color/colorAccent"
            app:boxStrokeWidth="3dp"
            app:helperTextTextColor="@color/colorAccent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nickname"
            android:textColorHint="@color/colorAccent"
            app:helperTextTextColor="@color/colorAccent"
            app:endIconMode="clear_text"
            app:endIconTint="@color/colorAccent"
            app:boxStrokeColor="@color/colorAccent"
            app:boxStrokeWidth="3dp"
            app:boxStrokeWidthFocused="2dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_nickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:fontFamily="casual"
                android:textStyle="bold"
                />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:background="@drawable/layout_style">


        <com.google.android.material.textfield.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/e_mail"
            android:textColorHint="@color/colorAccent"
            app:endIconCheckable="true"
            app:endIconMode="clear_text"
            app:endIconTint="@color/colorAccent"
            app:boxStrokeWidthFocused="2dp"
            app:boxStrokeColor="@color/colorAccent"
            app:boxStrokeWidth="3dp"
            app:helperTextTextColor="@color/colorAccent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textColorHint="@color/colorAccent"
            app:hintTextColor="@color/colorAccent"
            app:helperTextTextColor="@color/colorAccent"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/colorAccent"
            app:boxStrokeColor="@color/colorAccent"
            app:boxStrokeWidth="3dp"
            app:boxBackgroundMode="outline"
            app:boxStrokeWidthFocused="2dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:fontFamily="casual"
                android:inputType="textPassword"
                android:textStyle="bold"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/country_code"
                android:textColorHint="@color/colorAccent"
                app:boxStrokeWidthFocused="2dp"
                app:boxStrokeColor="@color/colorAccent"
                app:boxStrokeWidth="3dp"
                app:startIconTint="@color/colorAccent"
                android:layout_marginTop="4dp"
                android:layout_weight="0.4"


                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/edit_country"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold"
                    android:inputType="numberDecimal"
                    android:maxLength="2"
                    android:fontFamily="casual"
                    />



            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/gsm_code"
                android:textColorHint="@color/colorAccent"
                app:boxStrokeWidthFocused="2dp"
                app:boxStrokeColor="@color/colorAccent"
                app:boxStrokeWidth="3dp"
                app:startIconTint="@color/colorAccent"
                android:layout_marginTop="4dp"
                android:layout_weight="0.6"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/edit_gsm"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold"
                    android:inputType="numberDecimal"
                    android:maxLength="3"
                    android:fontFamily="casual"
                    />



            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/phone_code"
                android:textColorHint="@color/colorAccent"
                app:boxStrokeWidthFocused="2dp"
                app:boxStrokeColor="@color/colorAccent"
                app:boxStrokeWidth="3dp"
                app:startIconTint="@color/colorAccent"
                android:layout_marginTop="4dp"
                android:layout_weight="3"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_number"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold"
                    android:inputType="numberDecimal"
                    android:maxLength="7"
                    android:fontFamily="casual"
                    />



            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/button_register"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:textColor="@color/colorPrimary"
        android:text="@string/register"
        android:background="@drawable/button_style"
        android:textAllCaps="true"
        android:textStyle="bold"
        />




</LinearLayout>